# moanete

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  SPEC.md  TASKS.md  biome.json  docker-compose.gpu.yml  docker-compose.yml  index.html  justfile  manifest.json  mcp-servers.example.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/wiki/: index.md  log.md  overview.md
docs/wiki/architecture/: audio-pipeline.md  design-system.md  tech-stack.md
docs/wiki/concepts/: provider-registry.md  web-components.md
docs/wiki/features/: screen-capture.md  session-history.md  use-cases.md
docs/wiki/modules/: chat.md  insights.md  mcp.md  pip.md  settings.md  transcript.md
e2e/: app.spec.ts
man/: moanete.1
public/: pip.css  popup.html
scripts/: whisper-server.py
src/: background.ts  vite-env.d.ts
src/core/: analyzer.ts  audio.ts  config.ts  index.ts  mcp-bridge.ts  session.ts  storage.ts  summarizer.ts
src/mcp/: bridge.ts  client.ts  index.ts  server.ts
src/moanete/: __init__.py  __main__.py  analyzer.py  audio_capture.py  cli.py  config.py  llm.py  overlay.py  summarize.py  transcribe.py
src/providers/: index.ts
src/providers/llm/: anthropic.ts  ollama.ts  openai.ts  types.ts
src/providers/stt/: browser.ts  deepgram.ts  types.ts  (+2 more)
src/ui/: base.ts  global.css  index.ts  pip.ts  popup.css  popup.ts  util.ts
tests/: analyzer.test.ts  components.test.ts  core-exports.test.ts  provider-contracts.test.ts  settings-history.test.ts  ui-barrel.test.ts
(+12 files in other folders)
